--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 
 .card{background:white;padding:12px;margin-bottom:10px;border-radius:8px;box-shadow:0 2px 4px rgba(0,0,0,0.2)}
 
-.calendario-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px}
-.calendario-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:5px}
+.cal-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:10px}
+.cal-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:5px}
 .dia{padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer}
 .dia.liberado{background:#e6f4ea}
-.dia.inativo{background:#f3f4f6;opacity:0.5}
+.dia.inativo{background:#f3f4f6;opacity:0.4}
 .dia.bloqueado{background:#dc2626;color:white}
 
 .grid-horarios{display:grid;grid-template-columns:repeat(4,1fr);gap:8px;margin-top:15px}
-.horario-btn{padding:10px;border:1px solid #ccc;border-radius:6px;background:white}
-.horario-btn.ocupado{background:#ddd}
-.horario-btn.bloqueado{background:#dc2626;color:white}
+.horario{padding:10px;border:1px solid #ccc;border-radius:6px;background:white}
+.horario.ocupado{background:#ddd}
+.horario.bloqueado{background:#dc2626;color:white}
 
 .status{padding:4px 8px;border-radius:4px;color:white;font-size:12px;display:inline-block;margin:5px 0}
 .pendente{background:gray}
@@ -58,9 +58,9 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 <h3>VILA IMPÉRIO - <span id="anoAtual"></span></h3>
 </div>
 <div class="login-container">
-<div class="login-box" onclick="login('admin')">ADMIN</div>
-<div class="login-box" onclick="login('recepcao')">RECEPÇÃO</div>
-<div class="login-box" onclick="login('professor')">PROFESSOR</div>
+<div class="login-box" onclick="loginAdmin()">ADMIN</div>
+<div class="login-box" onclick="loginRecepcao()">RECEPÇÃO</div>
+<div class="login-box" onclick="loginProfessor()">PROFESSOR</div>
 </div>
 </div>
 
@@ -68,7 +68,7 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 <div class="sidebar">
 <div class="sidebar-header">
 <img src="logo-panobianco.png" style="max-width:80px">
-<h4 id="usuarioLabel"></h4>
+<h4 id="usuario"></h4>
 </div>
 <div id="menu"></div>
 <button onclick="logout()">Sair</button>
@@ -80,15 +80,15 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 
 <script>
 
-/* ================= ESTADO ================= */
+/* ================== ESTADO ================== */
 
 let state={
 tipo:null,
 nome:null,
-modo:null,
 mes:new Date().getMonth(),
 ano:new Date().getFullYear(),
-dataSelecionada:null
+modo:null,
+dataAtual:null
 };
 
 let agendamentos=JSON.parse(localStorage.getItem("agendamentos")||"[]");
@@ -97,45 +97,42 @@ let recepcionistas=JSON.parse(localStorage.getItem("recepcionistas")||"[]");
 
 document.getElementById("anoAtual").innerText=new Date().getFullYear();
 
-/* ================= LOGIN ================= */
+/* ================== LOGIN ================== */
 
-function login(tipo){
-
-if(tipo==="admin"){
+function loginAdmin(){
 if(prompt("Senha Admin:")!=="696907") return;
-state.tipo="admin";
-state.nome="ADMIN";
+state.tipo="admin"; state.nome="ADMIN"; entrar();
 }
 
-if(tipo==="recepcao"){
+function loginRecepcao(){
 let nome=prompt("Nome:");
-if(!nome) return;
-state.tipo="recepcao";
-state.nome=nome;
+let senha=prompt("Senha:");
+let u=recepcionistas.find(r=>r.nome===nome && r.senha===senha);
+if(!u) return alert("Login inválido");
+state.tipo="recepcao"; state.nome=nome; entrar();
 }
 
-if(tipo==="professor"){
-state.tipo="professor";
-state.nome="PROFESSOR";
+function loginProfessor(){
+state.tipo="professor"; state.nome="PROFESSOR"; entrar();
 }
 
+function entrar(){
 document.getElementById("loginScreen").classList.add("hidden");
 document.getElementById("app").classList.remove("hidden");
-document.getElementById("usuarioLabel").innerText=state.nome;
-
+document.getElementById("usuario").innerText=state.nome;
 renderMenu();
 renderCalendario();
 }
 
 function logout(){location.reload();}
 
-/* ================= MENU ================= */
+/* ================== MENU ================== */
 
 function renderMenu(){
 let m=document.getElementById("menu");
 m.innerHTML="";
 
-m.innerHTML+=`<button onclick="state.modo=null;renderCalendario()">📆 Calendário</button>`;
+m.innerHTML+=`<button onclick="renderCalendario()">📆 Calendário</button>`;
 
 if(state.tipo!=="professor"){
 m.innerHTML+=`<button onclick="state.modo='agendar';renderCalendario()">➕ Agendar</button>`;
@@ -144,92 +141,87 @@ m.innerHTML+=`<button onclick="state.modo='bloqHora';renderCalendario()">⛔ Blo
 }
 
 if(state.tipo==="admin"){
-m.innerHTML+=`<button onclick="abrirCadastroRecep()">👥 Recepcionistas</button>`;
+m.innerHTML+=`<button onclick="abrirRecep()">👥 Recepcionistas</button>`;
 }
 }
 
-/* ================= CADASTRO RECEPCIONISTAS ================= */
+/* ================== RECEPCIONISTAS ================== */
 
-function abrirCadastroRecep(){
+function abrirRecep(){
 let main=document.getElementById("main");
 main.innerHTML=`
-<h2>Cadastro de Recepcionistas</h2>
-<input id="nomeRecep" placeholder="Nome único">
-<input id="senhaRecep" placeholder="Senha">
-<button onclick="cadastrarRecep()">Cadastrar</button>
+<h2>Recepcionistas</h2>
+<input id="nomeR" placeholder="Nome único">
+<input id="senhaR" placeholder="Senha">
+<button onclick="addRecep()">Cadastrar</button>
 <button onclick="renderCalendario()">⬅ Voltar</button>
-<div id="listaRecep"></div>
-`;
-renderListaRecep();
+<div id="listaR"></div>`;
+renderListaR();
 }
 
-function renderListaRecep(){
-let div=document.getElementById("listaRecep");
+function renderListaR(){
+let div=document.getElementById("listaR");
 div.innerHTML="";
 recepcionistas.forEach((r,i)=>{
 div.innerHTML+=`
 <div class="card">
 <b>${r.nome}</b><br>
 Senha: ${r.senha}<br>
-<button onclick="excluirRecep(${i})">Excluir</button>
+<button onclick="removerRecep(${i})">Excluir</button>
 </div>`;
 });
 }
 
-function cadastrarRecep(){
-let nome=document.getElementById("nomeRecep").value.trim();
-let senha=document.getElementById("senhaRecep").value.trim();
-if(!nome||!senha) return alert("Preencha nome e senha");
+function addRecep(){
+let nome=document.getElementById("nomeR").value.trim();
+let senha=document.getElementById("senhaR").value.trim();
+if(!nome||!senha) return alert("Preencha tudo");
 if(recepcionistas.find(r=>r.nome===nome)) return alert("Nome já existe");
 recepcionistas.push({nome,senha});
 localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
-renderListaRecep();
+renderListaR();
 }
 
-function excluirRecep(i){
+function removerRecep(i){
 recepcionistas.splice(i,1);
 localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
-renderListaRecep();
+renderListaR();
 }
 
-/* ================= CALENDÁRIO ================= */
+/* ================== CALENDÁRIO ================== */
 
 function renderCalendario(){
 
 let main=document.getElementById("main");
 
 main.innerHTML=`
-<div class="calendario-header">
-<button onclick="mesAnterior()">◀</button>
+<div class="cal-header">
+<button onclick="mesAnt()">◀</button>
 <h2>${nomeMes(state.mes)} ${state.ano}</h2>
-<button onclick="mesSeguinte()">▶</button>
+<button onclick="mesProx()">▶</button>
 </div>
-<div class="calendario-grid">
+<div class="cal-grid">
 <div>DOM</div><div>SEG</div><div>TER</div><div>QUA</div><div>QUI</div><div>SEX</div><div>SAB</div>
 </div>
-<div class="calendario-grid" id="grid"></div>
-`;
+<div class="cal-grid" id="grid"></div>`;
 
-let primeiroDia=new Date(state.ano,state.mes,1).getDay();
-let totalDias=new Date(state.ano,state.mes+1,0).getDate();
+let primeiro=new Date(state.ano,state.mes,1).getDay();
+let total=new Date(state.ano,state.mes+1,0).getDate();
 let grid=document.getElementById("grid");
 
-for(let i=0;i<primeiroDia;i++) grid.appendChild(document.createElement("div"));
+for(let i=0;i<primeiro;i++) grid.appendChild(document.createElement("div"));
 
-for(let d=1;d<=totalDias;d++){
+for(let d=1;d<=total;d++){
 
-let data=formatarISO(state.ano,state.mes,d);
+let data=formatar(state.ano,state.mes,d);
 let diaSemana=new Date(data).getDay();
-
 let div=document.createElement("div");
 div.className="dia";
 
 if(diaSemana>=1 && diaSemana<=4){
 div.classList.add("liberado");
 div.onclick=()=>abrirDia(data);
-}else{
-div.classList.add("inativo");
-}
+}else div.classList.add("inativo");
 
 if(bloqueios.find(b=>b.data===data && b.tipo==="dia")){
 div.classList.add("bloqueado");
@@ -240,26 +232,136 @@ grid.appendChild(div);
 }
 }
 
-function mesAnterior(){
-state.mes--;
-if(state.mes<0){state.mes=11;state.ano--;}
-renderCalendario();
+function mesAnt(){state.mes--; if(state.mes<0){state.mes=11;state.ano--;} renderCalendario();}
+function mesProx(){state.mes++; if(state.mes>11){state.mes=0;state.ano++;} renderCalendario();}
+
+/* ================== DIA ================== */
+
+const horarios=["06:30","06:50","07:50","08:10","08:30","08:50","09:10","09:30","16:00","16:20","16:40","17:00","17:20","17:40","18:00","18:20","18:40","19:20","19:40","21:00","21:20"];
+
+function abrirDia(data){
+
+state.dataAtual=data;
+
+let bloqueioDia=bloqueios.find(b=>b.data===data && b.tipo==="dia");
+
+if(state.modo==="bloqDia"){
+if(!bloqueioDia){
+bloqueios.push({data,tipo:"dia"});
+}else if(state.tipo==="admin"){
+bloqueios=bloqueios.filter(b=>!(b.data===data && b.tipo==="dia"));
+}
+salvar(); renderCalendario(); return;
 }
 
-function mesSeguinte(){
-state.mes++;
-if(state.mes>11){state.mes=0;state.ano++;}
-renderCalendario();
+if(bloqueioDia && state.tipo!=="admin"){
+alert("Dia bloqueado"); return;
 }
 
-/* ================= UTIL ================= */
+let main=document.getElementById("main");
+main.innerHTML=`<h2>${data}</h2>
+<button onclick="renderCalendario()">⬅ Voltar</button>
+<div class="grid-horarios" id="horarios"></div>
+<div id="lista"></div>`;
+
+let grid=document.getElementById("horarios");
+
+horarios.forEach(h=>{
+let btn=document.createElement("button");
+btn.className="horario";
+btn.innerText=h;
+
+let ocupado=agendamentos.find(a=>a.data===data && a.horario===h);
+let bloqueado=bloqueios.find(b=>b.data===data && b.horario===h);
+
+if(ocupado){btn.classList.add("ocupado");btn.disabled=true;}
+if(bloqueado){
+btn.classList.add("bloqueado");
+if(state.tipo==="admin") btn.onclick=()=>desbloquearHora(data,h);
+}else{
+if(state.modo==="agendar" && !ocupado)
+btn.onclick=()=>agendar(data,h);
+if(state.modo==="bloqHora" && !ocupado)
+btn.onclick=()=>{bloqueios.push({data,horario:h,tipo:"hora"});salvar();abrirDia(data);}
+}
+
+grid.appendChild(btn);
+});
+
+mostrarLista(data);
+}
+
+/* ================== AGENDAR ================== */
+
+function agendar(data,horario){
+let nome=prompt("Nome do aluno:");
+let id=prompt("ID numérico até 10 dígitos:");
+
+if(!/^[0-9]{1,10}$/.test(id)) return alert("ID inválido");
+
+let existe=agendamentos.find(a=>a.id===id);
+if(existe && existe.nome!==nome) return alert("ID já vinculado a outro nome");
+
+agendamentos.push({nome,id,data,horario,status:"pendente",criadoPor:state.nome});
+salvar(); abrirDia(data);
+}
+
+/* ================== LISTA ================== */
+
+function mostrarLista(data){
+let lista=agendamentos
+.map((a,i)=>({...a,idx:i}))
+.filter(a=>a.data===data)
+.sort((a,b)=>a.horario.localeCompare(b.horario));
+
+let div=document.getElementById("lista");
+div.innerHTML="<h3>Agendamentos:</h3>";
+
+lista.forEach(a=>{
+div.innerHTML+=`
+<div class="card">
+<b>${a.horario}</b> - ${a.nome} (ID:${a.id})<br>
+<span class="status ${a.status}">${a.status}</span><br>
+${state.tipo!=="professor"?
+`<button onclick="msg(${a.idx})">Mensagem enviada</button>
+<button onclick="conf(${a.idx})">Presença confirmada</button>
+<button onclick="cancel(${a.idx})">Cancelar</button>`
+:
+`<button onclick="real(${a.idx})">Avaliação realizada</button>
+<button onclick="falt(${a.idx})">Faltou</button>`}
+</div>`;
+});
+}
+
+/* ================== STATUS ================== */
+
+function msg(i){agendamentos[i].status="mensagem";salvar();mostrarLista(state.dataAtual);}
+function conf(i){agendamentos[i].status="confirmado";salvar();mostrarLista(state.dataAtual);}
+function real(i){agendamentos[i].status="realizado";salvar();mostrarLista(state.dataAtual);}
+function falt(i){agendamentos[i].status="faltou";salvar();mostrarLista(state.dataAtual);}
+
+function cancel(i){
+if(state.tipo==="admin" || agendamentos[i].criadoPor===state.nome){
+agendamentos.splice(i,1);
+salvar(); mostrarLista(state.dataAtual);
+}else alert("Somente quem agendou ou admin pode cancelar.");
+}
+
+/* ================== BLOQUEIO ================== */
+
+function desbloquearHora(data,h){
+bloqueios=bloqueios.filter(b=>!(b.data===data && b.horario===h));
+salvar(); abrirDia(data);
+}
+
+/* ================== UTIL ================== */
 
 function salvar(){
 localStorage.setItem("agendamentos",JSON.stringify(agendamentos));
 localStorage.setItem("bloqueios",JSON.stringify(bloqueios));
 }
 
-function formatarISO(a,m,d){
+function formatar(a,m,d){
 return a+"-"+String(m+1).padStart(2,"0")+"-"+String(d).padStart(2,"0");
 }
 
